objects/Member__c.object
<CustomObject>
    <fields>
        <fullName>Brand_Name__c</fullName>
        <formula>Promo_Campaign__r.Brand__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Image__c</fullName>
        <formula>Promo_Campaign__r.Image__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Name__c</fullName>
        <formula>Promo_Campaign__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Promo_Message__c</fullName>
        <formula>IF(Promo_Campaign__r.Message__c &lt;&gt; &apos;&apos;,Promo_Campaign__r.Message__c, Promo_Campaign__r.Promo_message__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Promo Message</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coupons_Issued__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Coupons Issued</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Customer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Promo Campaign Membership</relationshipLabel>
        <relationshipName>Members</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Loy_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loy Member</label>
        <referenceTo>CVL__Loy_Member__c</referenceTo>
        <relationshipLabel>Members</relationshipLabel>
        <relationshipName>Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Promo_Campaign__c</fullName>
        <label>Promo Campaign</label>
        <referenceTo>Promo_Campaign__c</referenceTo>
        <relationshipLabel>Members</relationshipLabel>
        <relationshipName>Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Reedem_URL__c</fullName>
        <formula>&apos;https://viafone.secure.force.com/apex/VFP003_ReedemVoucher3?memberId=&apos; &amp; Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reedem URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Used</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Member</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>